# codecrafters-grep-rust

./: Cargo.toml  README.md  codecrafters.yml
.codecrafters/: run.sh
src/: lib.rs  main.rs
